# SpaceOddity

./: .gitignore  404.html  README.md  develop.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
API/src/spaceoddity/: index.html
API/src/spaceoddity_base/: index.html
conf/: spaceoddity.json
docs/: index.md
docs/API/src/: spaceoddity.md  spaceoddity_base.md
docs/API/src/cron/: pre_uninstall.md  stuff.md
i18n/po/: LINGUAS
i18n/po/en/: spaceoddity.po
i18n/po/es/: spaceoddity.po
install/: install.json  install.py  install_base.py  post_install.py  uninstall.json  uninstall.py
misc/: tree.html  tree.txt
pyplate/: project.json
pyplate/private/: private.json
search/: search_index.json
src/: spaceoddity.py  spaceoddity_base.py
tests/: test.py
todo/: todo.txt
